--- a/write_to_A1_2.ipynb
+++ b/write_to_A1_2.ipynb
@@ -32,7 +32,7 @@
     "#new_emp_data = pd.read_excel(\"/Users/rob/Downloads/for_database_input_postgres.xlsx\",\"Sheet1\",header=0)\n",
     "\n",
     "# Conneect to an existing database\n",
-    "conn = psycopg2.connect(\"dbname=zentak_employees user=rob\")\n",
+    "conn = psycopg2.connect(\"credentials\")\n",
     "\n",
     "# Open a cursor to perform database operations\n",
     "#cur = conn.cursor()\n",
